# FocusGuard

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: dns-seguro.html  dns-seguro.md
landing/: index.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: windows-updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: blocker.rs  db.rs  lib.rs  scheduler.rs  security.rs
src/components/: GlobalSchedule.tsx  PasswordPromptModal.tsx  PlatformCard.tsx  PrivateRelayBanner.tsx  ScheduleModal.tsx  SecuritySettings.tsx  SetupBanner.tsx  UpdateBanner.tsx
