[package]
name = "focusguard"
version = "1.3.1"
description = "FocusGuard - Block distracting websites on a schedule"
authors = ["JOSRANDOM"]
edition = "2021"

[lib]
name = "focusguard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand = "0.8"

# El auto-updater solo está activo en Windows: en macOS la app no está
# firmada/notarizada y un update no verificado por Gatekeeper no instalaría.
[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
